deploy/kubernetes/dist/service-database.yml
# Source: kanae/templates/postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/config"
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
