deploy/kubernetes/dist/service-kanae.yml
# Source: kanae/templates/kanae.yml
apiVersion: v1
kind: Service
metadata:
  name: kanae
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/config"
spec:
  type: ClusterIP
  selector:
    app: kanae
  ports:
    - name: http
      port: 8000
      targetPort: http
