deploy/kubernetes/dist/httproute-kanae.yml
# Source: kanae/templates/routing.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanae
  namespace: kanae
  annotations:
    kapp.k14s.io/change-rule: "upsert after upserting kanae/services"
spec:
  parentRefs:
    - name: kanae
      sectionName: https
  hostnames:
    - "api.ucmacm.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kratos
          port: 4433
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kanae
          port: 8000
