deploy/kubernetes/dist/networkpolicy-database.yml
# Source: kanae/templates/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/network"
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - kanae
                  - kratos
                  - keto
                  - "kanae-migrate"
                  - "kratos-migrate"
                  - "keto-migrate"
                  - postgres-checksum
      ports:
        - protocol: TCP
          port: 5432
