deploy/kubernetes/dist/networkpolicy-default-deny.yml
# Source: kanae/templates/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/network"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
