deploy/kubernetes/dist/networkpolicy-kanae.yml
# Source: kanae/templates/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kanae
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/network"
spec:
  podSelector:
    matchLabels:
      app: kanae
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 8000
    - from:
        - podSelector:
            matchLabels:
              app: kratos
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: database
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: valkey
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - podSelector:
            matchLabels:
              app: keto
      ports:
        - protocol: TCP
          port: 4466
        - protocol: TCP
          port: 4467
    - to:
        - podSelector:
            matchLabels:
              app: kratos
      ports:
        - protocol: TCP
          port: 4433
        - protocol: TCP
          port: 4434
