deploy/kubernetes/dist/networkpolicy-kratos.yml
# Source: kanae/templates/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kratos
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/network"
spec:
  podSelector:
    matchLabels:
      app: kratos
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
        - podSelector:
            matchLabels:
              app: kanae
      ports:
        - protocol: TCP
          port: 4433
    - from:
        - podSelector:
            matchLabels:
              app: kanae
      ports:
        - protocol: TCP
          port: 4434
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: database
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: kanae
      ports:
        - protocol: TCP
          port: 8000
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 100.64.0.0/10
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 587
