deploy/kubernetes/dist/networkpolicy-valkey.yml
# Source: kanae/templates/network.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey
  namespace: kanae
  annotations:
    kapp.k14s.io/change-group: "kanae/network"
spec:
  podSelector:
    matchLabels:
      app: valkey
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: kanae
      ports:
        - protocol: TCP
          port: 6379
